[package]
name = "leybold-opc-rs"
description = "Utility to read and write parameters on Leybold Vacvision vacuum controlers."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
binrw = "0.8.4"
clap = { version = "3.1.8" , features = ["derive"] }
hex-literal = "0.3.4"
rhexdump = "0.1.1"
