[package]
name = "leybold-opc-rs"
description = "Utility to read and write parameters on Leybold Vacvision vacuum controlers."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
arrayvec = "0.7.2"
binrw = "0.8.4"
clap = { version = "3.1.8" , features = ["derive"] }
ctrlc = "3.2.2"
hex-literal = "0.3.4"
rhexdump = "0.1.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sdb_parsing"
harness = false

[profile.release]
debug = true
