[package]
name = "leybold-opc-rs"
description = "Utility to read and write parameters on Leybold Vacvision vacuum controlers."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
compact_str = "0.7.0"
binrw = "0.11.1"
chrono = "0.4.26"
clap = { version = "4.0.24", features = ["derive", "wrap_help"] }
ctrlc = "3.2.2"
hex-literal = "0.4.1"
rhexdump = "0.1.1"
serde = { version = "1.0.152" , features = ["derive"] }
serde_json = "1.0.91"
serde-tuple-vec-map = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
yore = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sdb_parsing"
harness = false

[profile.release]
debug = true
